--- a/projects/ql-common/main/styles/ql-common/material-design/themes/theme-qunline-orange.scss
+++ b/projects/ql-common/main/styles/ql-common/material-design/themes/theme-qunline-orange.scss
@@ -18,7 +18,7 @@ html {
         surface-container-lowest: vars.$color-neutral-0,
         outline: vars.$color-neutral-40,
         outline-variant: vars.$color-neutral-40,
-        background: vars.$color-neutral-0,
+        background: vars.$color-neutral-0
     ));
 }
 
