--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,6 @@
 <div class="e2e-container flex-row">
     <div class="ql-layout__sidebar">
-        <img class="ql-layout__logo" src="/logo-white.svg" alt="Quantlane UI" />
-
-        <div class="ql-layout__sidenav">
-            <a mat-icon-button routerLink="/home" class="active">
-                <mat-icon>home</mat-icon>
-            </a>
-        </div>
-
+        <img class="ql-layout__logo" src="/logo-orange.svg" alt="Quantlane UI" />
     </div>
     <div class="e2e-container__body p-3">
         <router-outlet />
