--- a/src/modules/home/pages/home-page/ql-home-page.component.html
+++ b/src/modules/home/pages/home-page/ql-home-page.component.html
@@ -1,3 +1,8 @@
-<p>Hello World!</p>
+<div class="container text-center">
+    <h1 class="text-center mb-3">Hello World!</h1>
+
+    <button mat-flat-button color="warn" class="">Some action</button>
+
+</div>
 
 
