--- a/projects/ql-common/main/styles/ql-common/vars/_colors.scss
+++ b/projects/ql-common/main/styles/ql-common/vars/_colors.scss
@@ -17,3 +17,8 @@ $color-neutral-900: #020b11;
 $color-neutral-900--opacity-25: rgba(2, 11, 17, 0.25);
 $color-neutral-900--opacity-50: rgba(2, 11, 17, .5);
 $color-neutral-900--opacity-75: rgba(2, 11, 17, .75);
+
+$color-success-50: #ebf8e9;
+$color-success-100: #5bc84b;
+$color-success-300: #3abd26;
+$color-success-400: #29841b;
