--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,5 +2,6 @@
 @import 'ql-common/material-design/themes/theme-qunline-orange';
 @import 'ql-common/common';
 @import 'ql-shared';
+@import 'ql-shared.todos';
 
 @import './components';
