--- a/projects/ql-shared/todos/main/src/components/ql-todo-list-card/ql-todo-list-card.component.html
+++ b/projects/ql-shared/todos/main/src/components/ql-todo-list-card/ql-todo-list-card.component.html
@@ -5,10 +5,9 @@
                 {{ completedItemsTotalCount() }} / {{ itemsTotalCount() }}
             </div>
             <div class="flex-grow-1">
-                <h5 class="py-0 my-0">
+                <div class="ql-todo-list-card__title">
                     {{ entity().title }}
-                </h5>
-
+                </div>
                 @if (entity().description?.length) {
                     <div class="ql-todo-list-card__description">
                         {{ entity().description }}
@@ -17,10 +16,10 @@
             </div>
 
             <mat-divider [vertical]="true"/>
-            <button mat-stroked-button>
-                Edit
+            <button mat-stroked-button (click)="onDeleteBtnClicked()">
+                Delete
             </button>
-            <button mat-stroked-button>
+            <button mat-stroked-button (click)="onDetailsBtnClicked()">
                 Details
             </button>
         </div>
