--- a/projects/ql-shared/todos/main/styles/ql-shared.todos/components/ql-todo-list-card.component.scss
+++ b/projects/ql-shared/todos/main/styles/ql-shared.todos/components/ql-todo-list-card.component.scss
@@ -3,12 +3,24 @@
 .ql-todo-list-card {
     $self: &;
 
+    &:hover {
+        box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.16);
+    }
+
     &__tile {
         background: var(--mat-sys-surface-bright);
         border-radius: 12px;
         color: var(--mat-sys-primary);
         font-weight: 500;
         padding: 1rem;
+    }
+
+    &__title {
+        color: var(--mat-sys-primary);
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 24px;
+        text-decoration: none;
     }
 
     &--completed {
