--- a/src/modules/home/pages/board/ql-todo-lists-board-page.component.html
+++ b/src/modules/home/pages/board/ql-todo-lists-board-page.component.html
@@ -19,6 +19,7 @@
             <ql-todo-list-card
                     class="mb-3 d-block"
                     [entity]="entity"
+                    (details)="onTodoListDetails(entity)"
                     (delete)="onTodoListDelete(entity)"/>
         }
 
